WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142135
Fetch cache origins from the network process
https://bugs.webkit.org/show_bug.cgi?id=142135
Summary
Fetch cache origins from the network process
Anders Carlsson
Reported
2015-02-28 13:12:30 PST
Fetch cache origins from the network process
Attachments
Patch
(7.76 KB, patch)
2015-02-28 13:15 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(7.80 KB, patch)
2015-02-28 13:19 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-02-28 13:15:11 PST
Created
attachment 247610
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-28 13:17:51 PST
Attachment 247610
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/NetworkProcess.cpp:262: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/NetworkProcess.cpp:289: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/NetworkProcess.cpp:304: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2015-02-28 13:19:48 PST
Created
attachment 247611
[details]
Patch
WebKit Commit Bot
Comment 4
2015-02-28 13:22:48 PST
Attachment 247611
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/NetworkProcess.cpp:262: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/NetworkProcess.cpp:291: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/NetworkProcess.cpp:306: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 5
2015-02-28 13:47:37 PST
Comment on
attachment 247611
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247611&action=review
> Source/WebKit2/NetworkProcess/NetworkProcess.cpp:262 > +static void fetchDiskCacheOrigins(SessionID sessionID, std::function<void (Vector<WebsiteData::Entry>)> completionHandler)
Why “origins” and not “entires”?
> Source/WebKit2/UIProcess/WebsiteData/WebsiteDataStore.cpp:114 > + if (dataTypes & WebsiteDataTypeDiskCache && !isNonPersistentStore)
The double negative is confusing. Why not change the boolean to isPersistentStore?
Anders Carlsson
Comment 6
2015-02-28 13:53:22 PST
Committed
r180841
: <
http://trac.webkit.org/changeset/180841
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug