Fetch cache origins from the network process https://bugs.webkit.org/show_bug.cgi?id=142135

Reviewed by Dan Bernstein.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::cfURLCacheOrigins):
Add a new helper function that returns a vector of CFURL cache origins.

(WebKit::fetchDiskCacheOrigins):
Fetch the disk cache origins and pass them along to the completion handler. Currently we don't handle the new disk cache.

(WebKit::NetworkProcess::fetchWebsiteData):
Create a callback aggregator and fetch disk cache origins if we're asked for it.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::computeNetworkProcessAccessTypeForDataFetch):
New helper function that computes if we need to launch the network process in order to fetch data.

(WebKit::WebsiteDataStore::fetchData):
Fetch website data from the network process as well.

Canonical link: https://commits.webkit.org/160189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180841 268f45cc-cd09-0410-ab3c-d52691b4dbfc